tests/http/return_body_then_code.stderr
error[E0277]: the trait bound `[closure@$DIR/tests/http/return_body_then_code.rs:5:34: 5:36]: Handler<_>` is not satisfied
 --> tests/http/return_body_then_code.rs:5:34
  |
5 |     Router::new().route("/", get(|| ("hello", StatusCode::OK)));
  |                              --- ^^^^^^^^^^^^^^^^^^^^^^^^^^^^ the trait `Handler<_>` is not implemented for closure `[closure@$DIR/tests/http/return_body_then_code.rs:5:34: 5:36]`
  |                              |
  |                              required by a bound introduced by this call
  |
note: required by a bound in `uringy::ecosystem::http::server::routing::get`
 --> src/ecosystem/http/server/routing.rs
  |
  | pub fn get<ARGS>(handler: impl Handler<ARGS> + 'static) -> MethodRouter {
  |                                ^^^^^^^^^^^^^ required by this bound in `get`
